--- a/javascript.html
+++ b/javascript.html
@@ -6,7 +6,7 @@
     <title>JS Program</title>
   </head>
   <body>
-    <h1>Reversed Number</h1>
+    <h1>Reversing Number</h1>
 
     <label for="number"> Number:</label><br />
     <input type="number" id="number" name="number" /><br />
