adding random file to the github

--- a/basic_auth.html
+++ b/basic_auth.html
@@ -39,9 +39,9 @@ if ($_SERVER["REQUEST_METHOD"] == "POST") {
         <p style="color: red;"><?php echo $errorMessage; ?></p>
     <?php } ?>
     <form method="post" action="<?php echo htmlspecialchars($_SERVER["PHP_SELF"]); ?>">
-        <label for="username"> Username:</label><br>
+        <label for="username"> rohan:</label><br>
         <input type="text" id="username" name="username"><br>
-        <label for="password">Password:</label><br>
+        <label for="password">ningma:</label><br>
         <input type="password" id="password" name="password"><br><br>
         <input type="submit" value="Login">
     </form>
